add homepage, restructure

--- a/public/index.html
+++ b/public/index.html
@@ -44,142 +44,8 @@
     </header>
 
 
-    <!-- Main Article Section -->
-    <main class="article-container">
-        <article class="main-article">
-            <h2 class="article-title" style="font-family: 'Chelt', serif;">The Death of the Natural Diamond; How This Disappearance is Shaking the World
-            </h2>
-            <p class="article-title-sub">The last natural diamond was mined from the Earth's surface, what events led up
-                to
-                this moment and what does it mean for our environment.</p>
-
-            <hr style="width: 80%; opacity: 40%;">
-
-            <div class="article-image">
-                <img src="images/mine.jpg" alt="Image showing diamond">
-                <p class="image-caption">Jewler examining diamond, Source: Dillon Wanner, <a
-                        href="https://unsplash.com/photos/a-person-using-a-touchscreen-device-ayp0K7cAP68">unsplash.com</a>
-                </p>
-            </div>
-
-            <div class="author-profile">
-                <div class="author-profile-sub">
-                    <img class="profile-photo" src="images/author.jpg" alt="Author photo">
-                    <p style="font-family: 'Georgia', sans-serif; text-decoration: none;"><b><a href="author.html" style="text-decoration: none; color: black;">By <u>Layne Hunt</u></a></b></p>
-                </div>
-                <p class="article-author">September 15, 2176</p>
-            </div>
-
-            <div class="article-content" style="font: Georgia;">
-                <p>Natural diamonds are classified as carbon that has been compressed below the Earth’s mantle for
-                    millions of years. The last known natural diamonds were mined by a marine mining vessel off the
-                    coast of Namibia on Sunday, September 15, 2176. This event, though inevitable, came as a somber
-                    reminder after countless warnings from climate conservation scientists who cautioned that the days
-                    of mining these rare gems were numbered.
-                </p>
-
-                <p>For centuries, natural diamonds dazzled and mesmerized the masses. Their iconic sparkle graces the
-                    jewelry and crowns of the elite while bringing love to millions through the popularization of
-                    engagement rings. The stone can be seen making an appearance at almost every exclusive and important
-                    event throughout history, appearing in Europe as early as 1074 when they adorned a Hungarian queen’s
-                    crown. Over time, they became synonymous with luxury, wealth, and exclusivity, thrusting the mineral
-                    into the spotlight of society's rich and powerful. Some notable diamonds of the past include the
-                    Hope Diamond, known for its rumored curse, The Cullian diamond located at the helm of the
-                    Sovereign's Scepter with Cross, and the Koh-i-Noor, said to be a gift from the gods. Transcending
-                    the physical, diamonds ingrained themselves into pop culture through many different types of media
-                    including medieval paintings, song, and video content. One instance of this includes the song
-                    “Diamonds are a girl's best friend” sung by Marylin Monroe in 1954.
-                </p>
-
-                <div class="article-image">
-                    <img src="images/scepter.jpg" alt="Image of the Scepter of the Cross">
-                    <p class="image-caption" style="font-size: 14px;">Image of the Scepter of the Cross which contains
-                        the Cullian 2 diamond. Source: <a
-                            href="https://www.hrp.org.uk/tower-of-london/history-and-stories/the-crown-jewels/#gs.etsniv">
-                            Historic Royal Palaces</a></p>
-                </div>
-
-                <p>Natural diamonds hold a much longer history than humans, with most forming at least <a
-                        href="https://www.gemsociety.org/article/gem-formation/#Diamond_Gem_Formation">1 billion years
-                        ago amongst temperatures up to 1300 degrees Celsius</a>
-                    within the Earth's mantle. In some instances,
-                    diamonds can form up to 150 miles into the mantle. It is widely known as the hardest mineral on
-                    Earth, <a
-                        href="https://www.cam.ac.uk/research/discussion/opinion-harder-than-diamond-have-scientists-really-found-something-tougher-than-natures-invincible#:~:text=Mild%20steel%20has%20a%20Vickers,of%20around%2070%20%E2%80%93%20100%20GPa.">even
-                        surpassing steel</a>. Most diamonds made their way to the surface through volcanic activity,
-                    leaving the mineral scattered throughout ancient lava tubes.</p>
-
-
-                <p>Diamonds were <a href="https://www.naturaldiamonds.com/real/the-diamond-story/">first discovered by
-                        humans in India nearly 4,000 years ago</a>. During this time, they were
-                    prized for their medicinal properties and did not appear in Europe until 327 BC. Throughout history,
-                    radiance and strength warped into an underlying perception of luxury and invincibility. European
-                    royals believed diamonds made them invincible, associating the gem's indestructibility with their
-                    own rule. For millennia, diamonds have been endowed with myths and folklore, imbuing them with
-                    cultural and symbolic power. </p>
-
-                <p> Historically, the diamond trade has contributed significantly to our economies, becoming a pivotal
-                    source of revenue for previously war-torn countries with greater access to this resource. Despite
-                    these economic contributions, diamond mining is known to have significant environmental impacts,
-                    including habitat destruction, water pollution, and carbon emissions. Furthermore, the mining
-                    industry is a notoriously bad working environment, with some workers getting <a
-                        href="https://www.wilsoncenter.org/blog-post/examination-of-the-diamond-industry">less than 1
-                        dollar a day</a>. In 2001, it was reported that the <a
-                        href="https://diamondfacts.org/economic-growth/#:~:text=Diamonds%20represent%20approximately%2021%25%20of,it%20started%20operating%20in%201994.">Diamond
-                        and Jewelry business generated an annual 24.1 billion
-                        in economic value</a>. As these natural diamonds became less common, this estimate increased to
-                    a
-                    staggering <a href="just_kidding.html">120 billion in global exports in the year 2095</a>. Natural
-                    diamonds, once abundant enough to
-                    be traded freely, were elevated to near-mythical status as their availability waned. We as a species
-                    have internalized this scarcity as value, leading to this ballooning of price, an increase in
-                    underground trading activity, and a rise in overall criminal activity associated with the stone.
-                </p>
-
-                <p>A likely motivator for such growth is the carefully crafted relationship between diamonds and love.
-                    The first documented proposal using a diamond engagement ring was in 1477 when <a
-                        href="https://www.leibish.com/the-history-of-diamond-jewelry-article-1433?srsltid=AfmBOoq8KVfMPfz0OtV_6VByfuznyIkYQRhehWdG3n1SRuZPR6XW3NbT">Archduke
-                        Maximilian
-                        of Austria asked Mary of Burgundy to be his wife</a>. Thus, a new precedent was set and began to
-                    spread
-                    throughout the upper classes of Europe. This tie to love and romance developed further during the
-                    mid 20th century when the company De Beers released the slogan “A Diamond is Forever,” This slogan,
-                    along with other clever marketing tactics, transformed the stone into a staple of the loving
-                    relationship and greatly contributed to their rise in popularity.
-                </p>
-
-                <p>
-                    Tangentially, the contention between lab and natural diamonds maintained a steady pace, beginning
-                    with <a href="https://www.vrai.com/journal/post/the-history-of-lab-grown-diamonds">the first lab
-                        created diamonds in 1954 by General Energy</a>. During these early years, lab
-                    diamonds were considered imitations of their natural counterparts. However, the creation of the
-                    first gem-quality lab diamond in 1971 marked a turning point in history and opened the public to lab
-                    diamonds as a true substitute for natural diamonds. In recent years, <a
-                        href="just_kidding.html">technological advances have
-                        made it easier than ever to create such gems</a>, increasing their distribution. This has
-                    unintentionally caused their monetary value to plummet, contrasting the seemingly infinite increase
-                    natural diamonds are enjoying since this announcement. Beyond their increasing affordability, lab
-                    diamonds have a significantly lower carbon footprint and little to no ecological impact. As natural
-                    diamond supply comes to a stop, we can expect a corresponding decrease in energy consumption
-                    associated with diamond production, further minimizing the environmental impact.
-                </p>
-
-                <div class="article-image">
-                    <img src="images/factory.jpg" alt="Image of the de beers factory">
-                    <p class="image-caption" style="font-size: 14px;">Image of the De Beers factory. Source: <a
-                            href="https://www.canadianminingjournal.com/news/diamonds-de-beers-victor-mine-ends-production/">
-                            Canadian Mining Journal</a></p>
-                </div>
-
-                <p>A gem of the Earth, born in fire and miraculously traveling towards the surface, only to be exploited
-                    to the point of extinction by humans. Just as we as a species have consumed without regard for our
-                    environment, we depleted and destroyed something we held with such value. Looking toward the future,
-                    we can only hope to protect our environment from further destruction, though the loss of natural
-                    diamonds may only be the beginning.
-                </p>
-            </div>
-        </article>
-    </main>
+    <!-- Home Section -->
+    
 
     <script src="script.js"></script>
 
