--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,15 @@
     <!-- Home Section -->
     <h2 class="article-title" style="font-family: 'Chelt', serif;">Home Page
     </h2>
+    <section class="published-pages">
+        <h3>Published Pages</h3>
+        <ul>
+            <li><a href="opinion.html">Opinion</a></li>
+            <li><a href="annotation.html">Annotation</a></li>
+            <li><a href="obituary.html">Obituary</a></li>
+            <li><a href="theDaily_Google.html">The Daily Google</a></li>
+        </ul>
+    </section>
 
 
 
