home page skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
                 Times</a></h1>
     </div>
 
-    <!-- Header Section with Fixed Navbar -->
     <header class="header">
         <nav class="nav">
             <!-- Main Sections -->
@@ -43,19 +42,39 @@
         </nav>
     </header>
 
+    <main class="main-content">
+        <h2 class="article-title" style="font-family: 'Chelt', serif;">Today's Paper
+        </h2>
+        <div class="article-grid">
+            <div class="article large">
+                <h2>Breaking News: Market Crash</h2>
+                <p>Stock markets tumble as investors panic. Analysts predict a turbulent week ahead.</p>
+            </div>
+            <div class="article">
+                <h2>World News</h2>
+                <p>Leaders gather for a global climate summit to discuss urgent climate policies.</p>
+            </div>
+            <div class="article">
+                <h2>Tech Trends</h2>
+                <p>AI technology continues to evolve rapidly, revolutionizing industries worldwide.</p>
+            </div>
+            <div class="article">
+                <h2>Health Update</h2>
+                <p>New guidelines for a balanced diet released by health authorities.</p>
+            </div>
+            <div class="article large">
+                <h2>Travel Tips</h2>
+                <p>Explore the top destinations to visit in 2024 for an unforgettable adventure.</p>
+            </div>
+            <div class="article">
+                <h2>Sports Roundup</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+        </div>
+    </main>
 
-    <!-- Home Section -->
-    <h2 class="article-title" style="font-family: 'Chelt', serif;">Home Page
-    </h2>
-    <section class="published-pages">
-        <h3>Published Pages</h3>
-        <ul>
-            <li><a href="opinion.html">Opinion</a></li>
-            <li><a href="annotation.html">Annotation</a></li>
-            <li><a href="obituary.html">Obituary</a></li>
-            <li><a href="theDaily_Google.html">The Daily Google</a></li>
-        </ul>
-    </section>
+
+
 
 
 
@@ -72,6 +91,8 @@
             </nav>
         </div>
     </footer>
+
+    <script src="js/index.html"></script>
 
 </body>
 
