--- a/public/index.html
+++ b/public/index.html
@@ -51,25 +51,71 @@
                 <p>Stock markets tumble as investors panic. Analysts predict a turbulent week ahead.</p>
             </div>
             <div class="article">
-                <h2>World News</h2>
+                <h2><a href="/Authors/Katelyn.html">Katelyn</a>Benjamin H. Chinese Investments</h2>
                 <p>Leaders gather for a global climate summit to discuss urgent climate policies.</p>
             </div>
             <div class="article">
-                <h2>Tech Trends</h2>
+                <h2>Rudy - Guest opinion</h2>
                 <p>AI technology continues to evolve rapidly, revolutionizing industries worldwide.</p>
             </div>
             <div class="article">
-                <h2>Health Update</h2>
+                <h2>Dominic - learning more about the Department of Gov. Efficiency</h2>
                 <p>New guidelines for a balanced diet released by health authorities.</p>
             </div>
             <div class="article large">
-                <h2>Travel Tips</h2>
+                <h2>Jesse - College Football</h2>
                 <p>Explore the top destinations to visit in 2024 for an unforgettable adventure.</p>
             </div>
             <div class="article">
-                <h2>Sports Roundup</h2>
+                <h2>Tess - Social Media and Politics</h2>
                 <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
             </div>
+
+            <div class="article">
+                <h2>Ben L. Autonomous WS</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+
+            <div class="article">
+                <h2>Ben L. Autonomous WS</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+
+            <div class="article">
+                <h2>Ben L. Autonomous WS</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+
+            <div class="article large">
+                <h2>Jesse - College Football</h2>
+                <p>Explore the top destinations to visit in 2024 for an unforgettable adventure.</p>
+            </div>
+
+            <div class="article">
+                <h2>Ben L. Autonomous WS</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+
+            <div class="article">
+                <h2>Ben L. Autonomous WS</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+
+            <div class="article">
+                <h2>Ben L. Autonomous WS</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+
+            <div class="article">
+                <h2>Ben L. Autonomous WS</h2>
+                <p>Catch up on highlights from the weekend's most thrilling games and matches.</p>
+            </div>
+
+            <div class="article large">
+                <h2>Jesse - College Football</h2>
+                <p>Explore the top destinations to visit in 2024 for an unforgettable adventure.</p>
+            </div>
+
         </div>
     </main>
 
