--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                 <p>Stock markets tumble as investors panic. Analysts predict a turbulent week ahead.</p>
             </div>
             <div class="article">
-                <h2><a href="/Authors/Katelyn.html">Katelyn</a>Benjamin H. Chinese Investments</h2>
+                <h2>Benjamin H. Chinese Investments</h2>
                 <p>Leaders gather for a global climate summit to discuss urgent climate policies.</p>
             </div>
             <div class="article">
