--- a/public/authors.html
+++ b/public/authors.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="title-container">
-        <h1 id="center"><a href="https://www.nytimes.com/" style="text-decoration: none; color: black;">The New New York
+        <h1 id="center"><a href="index.html" style="text-decoration: none; color: black;">The New New York
                 Times</a></h1>
     </div>
 
